fix isolate causing z-index issue

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -15,12 +15,3 @@
     grid-template-rows: 6rem 1fr 8rem;
 }
 
-.full-width {
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-}
-
